[package]
name = "first"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "framed_server"
path = "src/framed_server.rs"

[[bin]]
name = "framed_client"
path = "src/framed_client.rs"