[package]
name = "first"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.7"
bytes = "1.6.0"
futures = "0.3.30"
reqwest = {version = "0.12.4", features = ["blocking"]}
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "framed_server"
path = "src/framed_server.rs"

[[bin]]
name = "framed_client"
path = "src/framed_client.rs"

[[bin]]
name = "lock"
path = "src/lock.rs"

[[bin]]
name = "channel"
path = "src/channel.rs"

[[bin]]
name = "web"
path = "src/web.rs"

[[bin]]
name = "as_markdown"
path = "src/as_markdown.rs"
